src/objects/Timesheet__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Effort_in_hours__c</fullName>
        <label>Effort (in hours)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incident_Activity__c</fullName>
        <label>Incident Activity</label>
        <picklist>
            <picklistValues>
                <fullName>Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review &amp; Peer Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rework</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Incident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident#</label>
        <referenceTo>Incident__c</referenceTo>
        <relationshipLabel>Timesheets</relationshipLabel>
        <relationshipName>Timesheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Activity__c</fullName>
        <label>Other Activity</label>
        <picklist>
            <picklistValues>
                <fullName>System Study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Troubleshooting &amp; Fixing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowledge Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Status Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviews &amp; feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meetings &amp; discussions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Env set up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reading documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document Preparation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Timesheet_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Timesheet Entry</label>
        <referenceTo>Timesheet_Entry__c</referenceTo>
        <relationshipLabel>Timesheets</relationshipLabel>
        <relationshipName>Timesheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Timesheet_for_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Timesheet for Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Timesheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Week_Start_Date__c</fullName>
        <label>Week Start Date</label>
        <type>Date</type>
    </fields>
    <label>Timesheet</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Timesheet_for_Date__c</columns>
        <columns>Effort_in_hours__c</columns>
        <columns>Incident__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Incident_Activity__c</columns>
        <columns>Comments__c</columns>
        <columns>Other_Activity__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Timesheet_Entry__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{0000000}</displayFormat>
        <label>Timesheet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>